--- a/TTCheck-wachOS/Base.lproj/Interface.storyboard
+++ b/TTCheck-wachOS/Base.lproj/Interface.storyboard
@@ -1,14 +1,40 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="13196" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="13051"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="TTCheck_wachOS_Extension">
+                    <items>
+                        <table alignment="left" id="h7Z-BF-yjd">
+                            <items>
+                                <tableRow identifier="tableCell" id="Q1C-aQ-KFu" customClass="TableCell" customModule="TTCheck_wachOS_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="h6l-Ky-mGc">
+                                        <items>
+                                            <label alignment="left" text="Name" minimumScaleFactor="0.90000000000000002" id="gcg-fc-rRw"/>
+                                            <label alignment="left" text="Bool" id="pXy-wR-kuL"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="labelCell" destination="gcg-fc-rRw" id="xfH-P8-UYS"/>
+                                        <outlet property="statusCell" destination="pXy-wR-kuL" id="Zd7-4a-Ac2"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="table" destination="h7Z-BF-yjd" id="fxv-ZO-nym"/>
+                    </connections>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
         </scene>
@@ -31,7 +57,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="TTCheck_wachOS" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
